# llm-inference-benchmark

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-webui-gpu.yml  ci.yml  docker.yml  release.yml
configs/: example.yaml  llama-cpp-cpu.yaml  llama-cpp-gpu.yaml  llama-cpp-q4km-best.yaml  llama-cpp-q4km-quality.yaml  llama-cpp-q8-best.yaml  llama-cpp-q8-quality.yaml  llama-cpp-quant-compare-quality.yaml  llama-cpp-quant-compare.yaml  llama-cpp-sweep-gpu0.yaml  llama-cpp-sweep-gpu20.yaml  llama-cpp-sweep-gpu99.yaml  llama-cpp-vram-sweep.yaml  matrix-example.yaml  onnx-example.yaml  openai-endpoint.yaml  pipeline-example.yaml  profile-short-chat.yaml  profile-summarization.yaml  sweep-example.yaml  transformers-cpu.yaml  transformers-gpu.yaml
configs/quality/: smoke-rubric.yaml
data/prompts/: code_completion.txt  long_context_smoke.txt  short_chat.txt  smoke.txt  summarization.txt
docs/: cli.md  context.md  metrics.md  project-charter.md  quickstart.md  task-log.md
docs/results/: README.md  gpu-rtx3050-tiny-gpt2.md  llama-cpp-rtx3050-llama32-3b.md  llama-cpp-rtx3050-quant-compare.md  llama-cpp-rtx3050-qwen25-coder-1.5b.md  llama-cpp-rtx3050-vram-sweep.md  rtx3050-4model-backend-comparison.md
scripts/: setup-gpu.sh
src/llm_inference_benchmark/: __init__.py  cli.py  compare.py  config.py  datasets.py  diff.py  hardware.py  judge.py  manifest.py  matrix.py  memory.py  metrics.py  pareto.py  perplexity.py  pipeline.py  power.py  profiles.py  puller.py  quality.py  reasoning.py  recommend.py  report.py  runner.py  server.py  sweep.py  sweep_report.py  task_quality.py  verify.py
src/llm_inference_benchmark/backends/: __init__.py  base.py  hf.py  llama_cpp.py  mock.py  onnx.py  openai_endpoint.py  vllm_backend.py
src/llm_inference_benchmark/ui/static/: app.css  app.js
src/llm_inference_benchmark/ui/templates/: dashboard.html
tests/: conftest.py  test_cli.py  test_compare.py  test_config.py  test_datasets.py  test_diff.py  test_env_cmd.py  test_gpu_fingerprint.py  test_hardware.py  test_hf_backend.py  test_judge.py  test_lifecycle_metrics.py  test_lifecycle_variance_analysis.py  test_llama_cpp_backend.py  test_manifest.py  test_matrix.py  test_memory.py  test_metrics.py  test_onnx_backend.py  test_openai_endpoint_backend.py  test_pareto.py  test_perplexity.py  test_pipeline_cmd.py  test_power.py  test_profiles.py  test_puller.py  test_quality.py  test_reasoning.py  test_recommend.py  test_report.py  test_runner.py  test_server.py  test_sweep.py  test_sweep_cmd.py  test_sweep_report.py  test_task_quality.py  test_variance.py  test_verify_cmd.py  test_version.py  test_vllm_backend.py
tests/e2e/: test_ui.py
tests/fixtures/: mock_run.csv  mock_run_with_quality.csv  mock_run_with_task_quality.csv  quality_smoke.yaml  transformers_run.csv
