[project]
name = "llm-inference-benchmark"
version = "0.1.0"
description = "Reproducible LLM inference benchmark across backends and quantization modes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
llm-bench = "llm_inference_benchmark.cli:main"

[project.optional-dependencies]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_inference_benchmark"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
# hf.py uses optional heavy deps (torch, transformers); excluded from CI type-check
ignore = ["src/llm_inference_benchmark/backends/hf.py"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = ["integration: marks integration tests that require optional deps or network access"]
